--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 ###############################################################################
 ###               University of Hawaii, College of Engineering
-###               Lab 2d - Octocat - EE 205 - Spring 2023
+###               Lab 2d - Octocat - EE 205 - Spring 2024
 ###
 ### Tells git which files to ignore
 ###
 ### @see https://git-scm.com/docs/gitignore
 ###
 ### @file   .gitignore
-### @author @todo yourName <@todo yourMail@hawaii.edu>
+### @author marknels@hawaii.edu
 ###############################################################################
 
 # Compiled Object files
